@@ -1,3 +1,7 @@
+2003-12-28  Martin Schaffner <maschaffner@gmx.ch>
+
+	* main/piggy.c: fix bug 1067
+
 2003-12-18  Bradley Bell  <btb@icculus.org>
 
 	* main/kconfig.c: fixes for linux-native joystick
